# vibe-motion

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
cmake/: clang-toolchain.cmake
docs/: compatibility.md
examples/: camera-baichuan.conf  camera-onvif.conf  camera01.conf  motion.conf
include/vibe_motion/: config.hpp  decode.hpp  detection.hpp  event.hpp  frame.hpp  hooks.hpp  http.hpp  log.hpp  media.hpp  onvif.hpp  runtime.hpp
packaging/: vibe-motion.service
src/: baichuan.cpp  baichuan.hpp  baichuan_protocol.hpp  config.cpp  decode.cpp  detection.cpp  event.cpp  hooks.cpp  http.cpp  main.cpp  media.cpp  media_internal.hpp  onvif.cpp  runtime.cpp  runtime_util.hpp
tests/: baichuan_test.cpp  config_test.cpp  decode_test.cpp  detection_test.cpp  event_test.cpp  hooks_test.cpp  http_test.cpp  media_test.cpp  onvif_test.cpp  runtime_test.cpp
tests/fixtures/: invalid-camera.conf  invalid-main.conf  motion.conf
tests/fixtures/cameras/: baichuan.conf  first.conf  onvif.conf  rtmp.conf  second.conf
tests/fixtures/deployment/: camera01.conf  camera02.conf  camera03.conf  motion.conf
tests/fixtures/runtime/: camera.conf  motion.conf
